Added tests Added fix for optimal solution Added compiled files basket.jar (with & without tests)