@@ -4,33 +4,28 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
-        String path = "G:\\Projects\\Java\\Basket\\data";
-        BasketSplitter basketSplitter = new BasketSplitter(path + "\\config8.json");
-
-        List<String> input = GetBasketJSON(path + "\\basket-80.json");
-
-        Map<String, List<String>> output = basketSplitter.split(input);
-
-        System.out.println("Map<String, List<String>>:");
-        for (Map.Entry<String, List<String>> entry : output.entrySet()) {
-            System.out.println(entry.getKey() + " : " + entry.getValue().size() + " " + entry.getValue());
-        }
-    }
-    static List<String> GetBasketJSON(String path) {
-        File file = new File(path);
         ObjectMapper objectMapper = new ObjectMapper();
-        try {
-            // Parse JSON array into a List<String>
-            return Arrays.asList(objectMapper.readValue(file, String[].class));
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return List.of();
+
+        Map<String, List<String>> map = new HashMap<>();
+
+        map.put("1", Arrays.asList("A", "C"));
+        map.put("2", Arrays.asList("A", "B"));
+        map.put("3", Arrays.asList("A", "D"));
+        map.put("4", Arrays.asList("A", "B"));
+        map.put("5", Arrays.asList("A", "C", "D"));
+        map.put("6", Arrays.asList("B", "C"));
+        map.put("7", Arrays.asList("C", "D"));
+
+        BasketSplitter basketSplitter = new BasketSplitter(map);
+
+        List<String> basket = List.of("1", "2", "3");
+
+        Map<String, Set<String>> output = basketSplitter.FilteringBasketByCompaniesTest(basket);
+
+        System.out.println("Everything is ok, setup with dependencies");
     }
 }
